# SIH

./: README.md
Annapoorna/: README.md
Annapoorna/backend/: .gitignore  chatbot.py  crop_disease_cnn_model.h5  database.py  generateReport.py  main.py  predict.py  pyproject.toml  sattelite_report.py  weather.py  whisper_transcribe.py
Annapoorna/backend/docCrud/: addDocs.py  deleteDocs.py  embed.py  initializers.py  retrieve.py
Annapoorna/website/: package-lock.json  package.json
Annapoorna/website/app/: layout.js  page.js
Annapoorna/website/app/dashboard/[id]/: layout.js
Annapoorna/website/app/dashboard/[id]/chat/: page.js
Annapoorna/website/app/dashboard/[id]/home/: page.js
Annapoorna/website/app/dashboard/[id]/profile/: page.js
Annapoorna/website/app/dashboard/[id]/reports/: page.js
Annapoorna/website/components/: ChatSideBar.js
