[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "earthengine-api>=1.5.24",
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.4",
    "langchain-openai>=0.3.28",
    "pymongo>=4.13.2",
    "scikit-learn>=1.7.1",
    "chromadb==0.4.14",
    "pillow>=9.0.0",
    "numpy>=1.21.0",
    "python-multipart>=0.0.5",
    "openai-whisper>=20250625",
    "ffmpeg>=1.4",
    "apscheduler>=3.11.0",
    "tensorflow>=2.20.0",
]

